--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
         <meta name="viewport" content="width=device-width" />
 
-        <link href="assets/css/bootstrap.css" rel="stylesheet" />
+        <!-- <link href="assets/css/bootstrap.css" rel="stylesheet" /> -->
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link href="assets/css/landing-page.css" rel="stylesheet"/>
         <!--     Fonts and icons     -->
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -75,7 +76,7 @@
                             <div class="description">
                                 <h2>Farming tech in your pocket</h2>
                                 <br>
-                                <h5>KrishiBal mobile app provides crop disease detection technogy to farmers on their fingure tips. For any queries contact us at <i>support@krishibal.in</i></h5>
+                                <h5>KrishiBal mobile app provides crop disease detection technogy to farmers on their finger tips. For any queries contact us at <i>support@krishibal.in</i></h5>
                             </div>
                             <div class="buttons">
                                 <button class="btn btn-simple btn-neutral">
@@ -285,8 +286,8 @@
 
     </div>
     </body>
-    <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
     <script src="assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
-    <script src="assets/js/bootstrap.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="assets/js/awesome-landing-page.js" type="text/javascript"></script>
 </html>
