--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <div class="description">
                                 <h2>Farming tech in your pocket</h2>
                                 <br>
-                                <h5>KrishiBal mobile app provides crop disease detection technogy to farmers on their finger tips. For any queries contact us at <i>support@krishibal.in</i></h5>
+                                <h5>KrishiBal mobile app provides crop disease detection technology to farmers on their finger tips. For any queries contact us at <i>support@krishibal.in</i></h5>
                             </div>
                             <div class="buttons">
                                 <button class="btn btn-simple btn-neutral">
