--- a/index.html
+++ b/index.html
@@ -85,9 +85,6 @@
                                 <button class="btn btn-simple btn-neutral">
                                 <i class="fa fa-apple"></i><p>Soon</p>
                                 </button>
-                                <button class="btn btn-simple btn-neutral">
-                                <i class="fa fa-windows"></i><p>on Mobile</p>
-                                </button>
                             </div>
                         </div>
                         <div class="col-md-5  hidden-xs">
@@ -278,7 +275,7 @@
                         </a>
                     </div>
                     <div class="copyright">
-                        Hand Crafted with <i class="fa fa-heart" style="color: red"></i> by <a href="https://dcrucs.co">dcrucs</a> &copy; <script type="text/javascript">var d = new Date();document.write(d.getFullYear());</script>
+                        Hand Crafted with <i class="fa fa-heart" style="color: red"></i> by team Krishibal &copy; <script type="text/javascript">var d = new Date();document.write(d.getFullYear());</script>
                     </div>
                 </div>
             </footer>
