--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         </a>
                     </div>
                     <div class="copyright">
-                        Hand Crafted with <i class="fa fa-heart" style="color: red"></i> by team Krishibal &copy; <script type="text/javascript">var d = new Date();document.write(d.getFullYear());</script>
+                        Hand Crafted with <i class="fa fa-heart" style="color: #0F6F11"></i> by team Krishibal &copy; <script type="text/javascript">var d = new Date();document.write(d.getFullYear());</script>
                     </div>
                 </div>
             </footer>
