Updated playstore links

--- a/index.html
+++ b/index.html
@@ -79,12 +79,13 @@
                                 <h5>KrishiBal mobile app provides crop disease detection technology to farmers on their finger tips. For any queries contact us at <i>support@krishibal.in</i></h5>
                             </div>
                             <div class="buttons">
-                                <button class="btn btn-simple btn-neutral">
-                                <i class="fa fa-android"></i><p>Coming</p>
+                                 <button class="btn btn-simple btn-neutral">
+                                <i class="fa fa-android"></i><p><a href="https://play.google.com/store/apps/details?id=in.krishibal.application&hl=en"> <img src="assets/img/google-play-badge.png" height="75"/></a></p>
                                 </button>
-                                <button class="btn btn-simple btn-neutral">
+                                <!-- <button class="btn btn-simple btn-neutral">
                                 <i class="fa fa-apple"></i><p>Soon</p>
-                                </button>
+                                </button>  -->
+                                
                             </div>
                         </div>
                         <div class="col-md-5  hidden-xs">
@@ -161,7 +162,7 @@
                             <p>
                                 To use krishibal is very simple you just need a smartphone to download the app form the app store. Once its done, detect diseases for a wide variety of crops by just a clicking an image of the affected area.
                             </p>
-                            <a href="#subscribe" id="Demo1" class="btn btn-warning btn-fill" data-button="warning">Subscribe for Beta Access</a>
+                            <a href="#subscribe" id="Demo1" class="btn btn-warning btn-fill" data-button="warning">Subscribe to our Beta channel</a>
                         </div>
                     </div>
                 </div>
@@ -231,9 +232,9 @@
                         <img class ="parallax-background-image flipped" src="assets/img/kbbg3.jpg">
                     </div>
                     <div class="info">
-                        <h1>Download from Android Play Store!</h1>
+                        <h1>Download on Android Now!</h1>
                         <p>Available free for download.</p>
-                        <a href="#" class="btn btn-neutral btn-lg btn-fill">COMING SOON</a>
+                        <a href="https://play.google.com/store/apps/details?id=in.krishibal.application&hl=en"> <img src="assets/img/google-play-badge.png" height="100"/></a>
                     </div>
                 </div>
             </div>
@@ -247,7 +248,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://play.google.com/store/apps/details?id=in.krishibal.application&hl=en">
                                 Download
                                 </a>
                             </li>
