Updated subscribe section text

--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@
             </div>
             <div class="section section-testimonial" id="subscribe">
                 <div class="container">
-                    <h4 class="header-text text-center">Subscribe for Early Access</h4>
+                    <h4 class="header-text text-center">Subscribe to our Beta channel</h4>
                     <div class="row">
                         <div class="col-md-6 col-md-offset-3">
                         <br><br><br>
                             <div class="card card-orange">
                                 <form action="//facebook.us15.list-manage.com/subscribe/post?u=b880dc6eef7ac5b306820ed3d&amp;id=7f713d9127" method="post" target="_blank">
                                     <div class="form-group">
-                                        <label for="mce-EMAIL">* Subscribe to be on early list for our beta user</label>
+                                        <label for="mce-EMAIL">* Subscribe to be on list for our future beta releases</label>
                                         <input type="email" class="form-control" required="required" name="EMAIL" id="mce-EMAIL" placeholder="Enter Email ID">
                                     </div>
                                     <button type="submit" class="btn btn-warning btn-fill" data-color="orange"><i class="fa fa-envelope-o"></i> Subscribe</button>
