--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                             Mail
                             </a>
                         </li>
+                        <li>
+                            <a href="http://www.knexinc.com">
+                                <img src="assets/img/knex_logo.png" height="25">
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -277,6 +282,7 @@
                     </div>
                     <div class="copyright">
                         Hand Crafted with <i class="fa fa-heart" style="color: #0F6F11"></i> by team Krishibal &copy; <script type="text/javascript">var d = new Date();document.write(d.getFullYear());</script>
+                        <a href="http://www.knexinc.com">Knex Inc.</a>
                     </div>
                 </div>
             </footer>
