--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <meta name="google-site-verification" content="9AwOT_B0_FdgdPDOynuBY6nqvo8o8otr6gThlwALAnU" />
         <link rel="icon" type="image/png" href="assets/img/favicon.ico">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <title>Krishibal: Farming tech in your pocket</title>
